# src/main/resources/openapi.yaml
@@ -32,41 +32,6 @@ tags:
     url: http://swagger.io
   name: user
 paths:
-  /pet/{petId}/uploadImage:
-    post:
-      operationId: uploadFile
-      parameters:
-      - description: ID of pet to update
-        in: path
-        name: petId
-        required: true
-        schema:
-          format: int64
-          type: integer
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/uploadFile_request'
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponse'
-          description: successful operation
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-      summary: uploads an image
-      tags:
-      - pet
-      x-content-type: multipart/form-data
-      x-accepts:
-      - application/json
-      x-tags:
-      - tag: pet
   /pet:
     post:
       operationId: addPet
@@ -680,10 +645,6 @@ paths:
 components:
   schemas:
     ApiResponse:
-      example:
-        code: 0
-        type: type
-        message: message
       properties:
         code:
           format: int32
@@ -837,16 +798,6 @@ components:
       type: object
       xml:
         name: User
-    uploadFile_request:
-      properties:
-        additionalMetadata:
-          description: Additional data to pass to server
-          type: string
-        file:
-          description: file to upload
-          format: binary
-          type: string
-      type: object
     updatePetWithForm_request:
       properties:
         name:
